WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255933
REGRESSION(
263322@main
): Cannot build ANGLE due to missing declaration of uint8_t
https://bugs.webkit.org/show_bug.cgi?id=255933
Summary
REGRESSION(263322@main): Cannot build ANGLE due to missing declaration of uin...
Michael Catanzaro
Reported
2023-04-25 09:54:47 PDT
This looks very similar to
bug #250689
, but it's something new: In file included from /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:5: /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:68:16: error: use of undeclared identifier 'uint8_t' std::array<uint8_t, kSHA1Length> DigestAsArray() const; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:74:5: error: unknown type name 'uint32_t' uint32_t A, B, C, D, E; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:76:5: error: unknown type name 'uint32_t' uint32_t H[5]; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:80:9: error: unknown type name 'uint32_t' uint32_t W[80]; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:81:9: error: unknown type name 'uint8_t' uint8_t M[64]; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:84:5: error: unknown type name 'uint32_t' uint32_t cursor; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:85:5: error: unknown type name 'uint64_t' uint64_t l; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:96:9: error: use of undeclared identifier 'M' M[cursor++] = *d++; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:105:5: error: use of undeclared identifier 'M' M[cursor++] = 0x80; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:111:13: error: use of undeclared identifier 'M' M[cursor++] = 0; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:117:9: error: use of undeclared identifier 'M' M[cursor++] = 0; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:119:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 56) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:120:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 48) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:121:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 40) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:122:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 32) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:123:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 24) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:124:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 16) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:125:5: error: use of undeclared identifier 'M' M[cursor++] = (l >> 8) & 0xff; ^ /home/mcatanzaro/Projects/WebKit/Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.cc:126:5: error: use of undeclared identifier 'M' M[cursor++] = l & 0xff; ^ fatal error: too many errors emitted, stopping now [-ferror-limit=]
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-04-25 09:56:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13154
Michael Catanzaro
Comment 2
2023-04-25 10:05:56 PDT
Upstream issue report:
https://bugs.chromium.org/p/angleproject/issues/detail?id=8144
EWS
Comment 3
2023-04-25 10:35:57 PDT
Committed
263383@main
(8b65ac68c424): <
https://commits.webkit.org/263383@main
> Reviewed commits have been landed. Closing PR #13154 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-04-25 10:37:30 PDT
<
rdar://problem/108511369
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug