REGRESSION(263322@main): Cannot build ANGLE due to missing declaration of uint8_t https://bugs.webkit.org/show_bug.cgi?id=255933

Unreviewed build fix.

* Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h:

Canonical link: https://commits.webkit.org/263383@main