Source/ThirdParty/ANGLE/src/common/base/anglebase/sha1.h
@@ -6,6 +6,7 @@
 #define ANGLEBASE_SHA1_H_
 
 #include <stddef.h>
+#include <stdint.h>
 
 #include <array>
 #include <string>
